kubeconfig/webservice/ose/web-deployment.yml
kind: "DeploymentConfig"
apiVersion: "v1"
metadata:
  name: "westernwall-web"
spec:
  template:
    metadata:
      labels:
        name: "westernwall-web"
    spec:
      containers:
        - name: "westernwall-web"
          image: "westernwall/westernwall-mongo:latest"
          ports:
            - name: http-server
              containerPort: 5000
              protocol: "TCP"
  replicas: 3
  triggers:
    - type: "ConfigChange"
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        containerNames:
          - "westernwall-web"
        from:
          kind: "ImageStreamTag"
          name: "westernwall-mongo:latest"
  strategy:
    type: "Rolling"
  paused: false
  revisionHistoryLimit: 3
  minReadySeconds: 0
