kubeconfig/webservice/ose/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: westernwall-web
  labels:
    name: westernwall-web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    name: westernwall-web
