kubeconfig/webservice/ose/web-route.yml
apiVersion: v1
kind: Route
metadata:
  name: westernwall
spec:
  to:
    kind: Service
    name: westernwall-web
