kubeconfig/webservice/ose/web-policy.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-http
spec:
 podSelector:
   matchLabels:
     role: web
 ingress:
 - from: 
   - podSelector: {}
   - namespaceSelector: {}
 - ports:
   - protocol: TCP
     port: 5000
